@startuml


entity "user" {
  userID <<PK>>
  name VARCHAR(30)
  password VARCHAR(25)
}

entity "config" {
  userID : INT <<PK>> <<FK>>
  configID : INT <<PK>
  mainboard : INT
  ram : INT
  cpu : INT
  gpu : INT
  psu : INT
  ccase : INT
  hdd : INT 
  ssd : INT
  fan : INT
  radiator : INT
  cpu_cooler : INT
}

entity "brand" {
  ID : INT <<PK>>
  name : VARCHAR(20)
}

entity "mainboard" {
  ID INT <<PK>>
  brandID : INT <<FK>>
  chipset INT
  form VARCHAR(20) <<FK>>
  ddrType INT
  ethernet_speed INT
  IO VARCHAR(255)
  other_features VARHAR(255)
  price INT
}

entity "cpu" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  line : VARCHAR(50)
  name : VARCHAR(50)
  core_count : INT
  thread_count : INT
  ddrType INT
  clock_speed : INT 
  form : VARCHAR(10)
  tdp : INT
  price : INT
}

entity "gpu" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  line : VARCHAR(50)
  name : VARCHAR(50)
  clock_speed : INT 
  IO : VARCHAR(255)
  price : INT
}

entity "ram" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  clock_speed : INT 
  timing : INT
  ddrType : VARCHAR(50)
  price : INT
}

entity "psu" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  wattage : INT
  type : VARCHAR(50)
  price : INT
}

entity "hdd" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  storage : INT
  rpm : INT
  price : INT
}

entity "ssd" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  storage INT
  type : VARCHAR(50)
  price : INT
}

entity "case" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  form : VARCHAR(10) <<FK>>
  price : INT
}

entity "size" {
  name : VARCHAR(20) <<PK>>
  size : INT
}

entity "fan" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  size : INT
  type : VARCHAR(50)
  price : INT
}

entity "cpu_cooler" {
  ID : INT <<PK>>
  brandID : INT <<FK>>
  name : VARCHAR(50)
  form : VARCHAR(10)
  price : INT
}

entity "radiator" {
  ID : INT <<PK>>
  brandID : INT NOT NULL <<FK>>
  name : VARCHAR(50)
  size : INT 
  price : INT
}

mainboard -- "1" brand
cpu -- "1" brand
gpu -- "1" brand
ram -- "1" brand
psu -- "1" brand
hdd -- "1" brand
ssd -- "1" brand
case -- "1" brand
fan -- "1" brand
cpu_cooler -- "1" brand
radiator -- "1" brand
mainboard -- "1" config
cpu o-- config
gpu o-- config
ram o-- config
psu o-- config
hdd o-- config
ssd o-- config
case o-- config
fan o-- config
cpu_cooler o-- config
radiator o-- config
case o-- size
mainboard o-- size
user "1" *-- "n" config
@enduml
